syntax = "proto3";

package courier.v1;

option go_package = "courier/internal/presentation/grpc;courierv1";

//
// CourierAuthService provides operations for courier authentication.
// API Version: v1
//
service CourierAuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  
  rpc Login(LoginRequest) returns (LoginResponse);
  
  rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);
}

//
// Message definitions
//

message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string phone = 4;
}

message RegisterResponse {
  string courier_id = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message AuthenticateRequest {
  string token = 1;
}

message AuthenticateResponse {
  string courier_id = 1;
}
